namcap (3.0.2)
	- extravars rule: reduce the amount of false positives
	- fix crashes when running in non-English locales

namcap (3.0.1)
	- fix the ChecksumsRule behaviour with no source array (FS#23258)
	- correct old PacmanPackage interface usage (FS#23259, FS#23260)

namcap (3.0)
	- switch to Python 3
	- rework dependency analysis
	- add split package parsing capabilities
	- new rule checking whether info files are installed (FS#23003)
	- new rule checking that glib schemas and gio modules are
	  registered (FS#22881)
	- new rule checking update-desktop-database is run (FS#22929)
	- the permissions rule warns against setuid/setgid files (FS#18852)
	- new rules for basic coherence of split packages (FS#15027)
	- API: rework the implementation of rules
	- API: give PacmanPackage a mapping-like interface
	- fix: test suite ran with i686 architecture set
	- fix: kdeprograms rule not seeing indirect dependencies
	- fix: FS#15591 consistent hicolor-icon-theme messages
	- fix: FS#17166 consistent shared-mime-info messages
	- test: add unit test for the rpath rule

namcap (2.8.2)
	- fix: extravars rule parses PKGBUILDs incorrectly

namcap (2.8.1)
	- don't be restrictive in filenames rule
	- fix: emptydirs rule was not working properly
	- fix: kdeprograms rule was not working properly
	- fix: extravars rule was not run
	- fix: extravars rule did not know options variable
	- the test suite covers all rules except "depends" and "rpath"

namcap (2.8)
	- compatibility with changes in local DB format introduced by
	  pacman 3.5
	- New check for inexistent backup files
	- New check for cross-directory hard links (FS#20314)
	- New check for filenames with non-ASCII or non-printable
	  characters (FS#20758)
	- New check for kdebase-runtime dependency for KDE programs
	  (FS#15110)
	- introduce a basic test suite
	- Correct handling of versioned provides (version is now ignored)
	- Correct checksum checking to detect non-hexadecimal digits

namcap (2.7)